Add code to allow user to add flags on the squares with bombs, final styling of grid and squares

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid" id="grid"></div>
+    <div class="container">
+        <div class="grid"></div>
+        <div class="flags-left">Flags Left: <span id="flags-left"></span></div>
+        <div id="result"></div>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
