--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="Stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Minesweeper!</title>
 </head>
 <body>
     <div class="container">
-        <div class="grid"></div>
         <div class="flags-left">Flags Left: <span id="flags-left"></span></div>
+        <div class="grid"></div>
         <div id="result"></div>
+        <button id="try-again" type="submit">Try Again!</button>
     </div>
 
     <script src="assets/js/script.js"></script>
